# uv-minimal

./: LICENSE  README.md  pyproject.toml  test_main.py  writeitai.Dockerfile
src/: main.py  test_main.py
