[project]
name = "uv-minimal"
version = "0.1.0"
description = "Minimal uv template"
readme = "README.md"
authors = [
    { name = "WriteIt.ai", email = "info@writeit.ai" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]
