[project]
name = "my-app"
version = "0.1.0"
description = "My awesome application"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain-openai",
    "pydantic",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]